--- a/css/index.css
+++ b/css/index.css
@@ -114,6 +114,28 @@
   background-size: 10%;
 }
 
+.list li .destroy {
+  display: none;
+  position: absolute;
+  margin: auto 0;
+  top: 0;
+  bottom: 0;
+  right: 10px;
+  width: 40px;
+  height: 40px;
+  font-size: 30px;
+  color: #cc9a9a;
+  margin-bottom: 11px;
+  appearance: none;
+  border: 0;
+  background: none;
+  cursor: pointer;
+}
+
+.list li:hover .destroy {
+  display: block;
+}
+
 .main .footer {
   display: flex;
   justify-content: space-between;
