实现右下角按钮的显示与隐藏

--- a/css/index.css
+++ b/css/index.css
@@ -143,6 +143,11 @@
   display: block;
 }
 
+.list li .destroy:hover {
+  transition: all 0.4s;
+  color: brown;
+}
+
 .main .footer {
   display: flex;
   justify-content: space-between;
