--- a/css/index.css
+++ b/css/index.css
@@ -179,7 +179,7 @@
   border: 1px solid rgba(175, 47, 47, 0.2);
 }
 
-.filters li a:hover {
+.main .footer .filters li a:hover {
   border: 1px solid rgba(175, 47, 47, 0.1);
 }
 
